# aoc

./: .gitignore  Cargo.toml  README.md  aoc-migration  template.rs
2021/: Cargo.toml
2021/day_03/src/: main.rs
2021/day_04/src/: main.rs
2021/day_07/src/: main.rs
2021/day_08/src/: main.rs
2021/day_09/src/: main.rs
2021/day_10/src/: main.rs
2021/day_11/src/: main.rs
2021/day_13/src/: main.rs
2021/day_14/src/: main.rs
2021/day_16/src/: main.rs
2021/src/day_01/: main.rs
2021/src/day_02/: main.rs
2021/src/day_05/: main.rs
2021/src/day_06/: main.rs
2021/src/day_12/: main.rs
2021/src/day_15/: main.rs
2022/: Cargo.toml
2022/day_01/.bench/: Cargo.toml
2022/day_01/.bench/benches/: my_benchmark.rs
2022/day_03/src/: main.rs
2022/day_06/: Cargo.toml
2022/day_10/src/: main.rs
2022/day_14/: Cargo.toml
2022/day_15/: Cargo.toml
2023/: Cargo.toml
2023/day_02/src/: main.rs
2023/day_03/src/: main.rs
2023/day_05/src/: main.rs
2023/src/: matrix.rs
2023/src/day_03/: main.rs
2023/src/day_07/: main.rs
2024/day_01/src/: main.rs
2024/day_02/src/: main.rs
2024/day_03/: Cargo.toml
2024/day_03/src/: main.rs
2024/day_04/src/: main.rs  matrix.rs
2024/day_05/src/: main.rs
2024/day_06/src/: main.rs  matrix.rs
2024/day_07/src/: main.rs
2024/day_08/src/: main.rs  matrix.rs
2024/day_22/src/: main.rs
src/: lib.rs
src/days/: day02.rs  day04.rs  day06.rs  day08.rs  day09.rs  day14.rs  day15.rs  day16.rs
src/days/input/: day08.test
year_2021/src/: lib.rs  main.rs
year_2021/src/days/: day01.rs  day03.rs  day05.rs  (+5 more)
year_2022/: Cargo.toml
year_2023/: Cargo.toml
